# hyprshell

./: .gitignore  app.ts  flake.nix  meson.build  style.scss
po/: meson.build
style/applauncher/: Applauncher.scss
style/bar/: bar.scss
style/logout/: Logout.scss
style/osd/: OSD.scss
widget/applauncher/: Applauncher.tsx
widget/bar/: Bar.tsx
widget/logout/: Logout.tsx
widget/osd/: OSD.tsx
